[package]
name = "heim-cpu"
version = "0.1.0-rc.1"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Cross-platform CPU information"
keywords = ["heim", "system", "cpu", "frequency", "time"]
categories = ["asynchronous", "os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[dependencies]
heim-common = { version = "0.1.0-rc.1", path = "../heim-common" }
heim-runtime = { version = "0.1.0-rc.1", path = "../heim-runtime" }
futures = { version = "0.3.13", default-features = false, features = ["std"] }
lazy_static = "1.4.0"
cfg-if = "1.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.87"
glob = "0.3.0"
smol = "1.2.5"

[target.'cfg(target_os = "windows")'.dependencies]
ntapi = "0.3.6"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.9"
features = [
    "powerbase",
    "sysinfoapi",
    "minwindef",
    "winnt",
    "winerror",
    "processthreadsapi",
    "impl-default",
    "winbase",
]

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.87"
mach = "0.3.2"

[dev-dependencies]
heim-derive = { version = "0.1.0-rc.1", path = "../heim-derive" }
smol = "1.2.5"
futures = "0.3.13"
version-sync = "0.9.2"
futures-timer = "3.0.2"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
