[package]
name = "heim-memory"
version = "0.1.0-rc.1"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Cross-platform memory information"
keywords = ["heim", "system", "memory", "swap"]
categories = ["asynchronous", "os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[dependencies]
heim-common = { version = "0.1.0-rc.1", path = "../heim-common" }
heim-runtime = { version = "0.1.0-rc.1", path = "../heim-runtime" }
cfg-if = "1.0.0"

[target.'cfg(target_os = "windows")'.dependencies]
libc = "0.2.87"
winapi = { version = "0.3.9", default-features = false, features = ["minwindef", "sysinfoapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.87"
mach = "0.3.2"
lazy_static = "1.4.0"

[dev-dependencies]
heim-derive = { version = "0.1.0-rc.1", path = "../heim-derive" }
smol = "1.2.5"
version-sync = "0.9.2"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
