[package]
name = "heim-net"
version = "0.1.0-rc.1"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Cross-platform network information"
keywords = ["heim", "system", "network", "connections", "nic"]
categories = ["asynchronous", "os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[dependencies]
heim-common = { version = "0.1.0-rc.1", path = "../heim-common" }
heim-runtime = { version = "0.1.0-rc.1", path = "../heim-runtime" }
cfg-if = "1.0.0"
bitflags = "1.2.1"
macaddr = "1.0.1"
libc = "0.2.87"

[target.'cfg(unix)'.dependencies]
nix = "0.20.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["iphlpapi"] }
widestring = "0.4.3"

[dev-dependencies]
heim-derive = { version = "0.1.0-rc.1", path = "../heim-derive" }
smol = "1.2.5"
futures = "0.3.13"
version-sync = "0.9.2"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
